@@ -6,6 +6,8 @@ import com.ufps.Quick_Delivery.client.ClientePedido;
 import com.ufps.Quick_Delivery.client.ClienteProducto;
 import com.ufps.Quick_Delivery.dto.DeliveryUserDto;
 import com.ufps.Quick_Delivery.dto.PedidoCompletoResponse;
+import com.ufps.Quick_Delivery.models.Entrega;
+import com.ufps.Quick_Delivery.repository.EntregaRepository;
 import com.ufps.Quick_Delivery.services.DeliveryUserService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -15,8 +17,8 @@ import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
 
 import java.time.LocalDate;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/delivery")
@@ -29,6 +31,7 @@ public class DeliveryUserController {
     private final ClientePedido clientePedido;
     private final ClienteDireccion clienteDireccion;
     private final ClienteProducto clienteProducto;
+    private final EntregaRepository entregaRepository; // ✅ AGREGADO
 
     @GetMapping
     public ResponseEntity<List<DeliveryUserDto>> getAll() {
@@ -74,10 +77,6 @@ public class DeliveryUserController {
         return ResponseEntity.ok().build();
     }
 
-    /**
-     * HU023: Consultar información de contacto del cliente
-     * 
-     */
     @GetMapping("/{clienteId}/contacto")
     public ResponseEntity<ClienteClient.ClienteContactoResponse> obtenerContactoCliente(
             @PathVariable UUID clienteId) {
@@ -91,74 +90,58 @@ public class DeliveryUserController {
 
     @GetMapping("cliente/pedido/{pedidoId}")
     public ResponseEntity<ClientePedido.PedidoResponse> obtenerPedido(@PathVariable UUID pedidoId) {
-
         ClientePedido.PedidoResponse pedido = clientePedido.obtenerPedidoPorId(pedidoId);
-
         if (pedido == null) {
             return ResponseEntity.notFound().build();
         }
-
         return ResponseEntity.ok(pedido);
     }
 
     @GetMapping("/direccion/{direccionId}")
     public ResponseEntity<ClienteDireccion.DireccionResponse> obtenerDireccion(
             @PathVariable UUID direccionId) {
-
         try {
             ClienteDireccion.DireccionResponse direccion = clienteDireccion.obtenerDireccionPorId(direccionId);
-
             if (direccion == null) {
                 return ResponseEntity.notFound().build();
             }
-
             return ResponseEntity.ok(direccion);
         } catch (Exception e) {
-
-            return ResponseEntity.status(502).build(); // BAD_GATEWAY
+            return ResponseEntity.status(502).build();
         }
     }
 
     @GetMapping("/producto/{productoId}")
     public ResponseEntity<ClienteProducto.ProductoResponse> obtenerProducto(
             @PathVariable UUID productoId) {
-
         try {
             ClienteProducto.ProductoResponse producto = clienteProducto.obtenerProductoPorId(productoId);
-
             if (producto == null) {
                 return ResponseEntity.notFound().build();
             }
-
             return ResponseEntity.ok(producto);
-
         } catch (Exception e) {
-            return ResponseEntity.status(502).build(); // BAD_GATEWAY si el otro servicio falla
+            return ResponseEntity.status(502).build();
         }
     }
 
     @GetMapping("/pedido/completo/{pedidoId}")
     public ResponseEntity<PedidoCompletoResponse> obtenerPedidoCompleto(@PathVariable UUID pedidoId) {
         try {
-            // 1. Obtener el pedido
             ClientePedido.PedidoResponse pedido = clientePedido.obtenerPedidoPorId(pedidoId);
             if (pedido == null)
                 return ResponseEntity.notFound().build();
 
-            // 2. Obtener datos del cliente
             ClienteClient.ClienteContactoResponse cliente = clienteClient
                     .obtenerContactoCliente(pedido.getCliente().getId());
 
-            // 3. Obtener dirección de entrega
             ClienteDireccion.DireccionResponse direccion = clienteDireccion
                     .obtenerDireccionPorId(pedido.getDireccionEntregaId());
 
-            // 4. Obtener información de los productos del pedido
             List<ClienteProducto.ProductoResponse> productos = pedido.getItems().stream()
                     .map(item -> clienteProducto.obtenerProductoPorId(item.getProductoId()))
                     .toList();
 
-            // 5. Construir respuesta completa
             PedidoCompletoResponse respuesta = new PedidoCompletoResponse();
             respuesta.setPedido(pedido);
             respuesta.setCliente(cliente);
@@ -174,55 +157,122 @@ public class DeliveryUserController {
     }
 
     /**
-     * HU021: Repartidor consulta historial de entregas.
-     * ⭐ Modificado para aceptar usuarioId en lugar de deliveryId
+     * ✅ HU021: Repartidor consulta historial de entregas - ACTUALIZADO
+     * Ahora devuelve las entregas desde la tabla entregas (con estado real)
      */
     @GetMapping("/historial")
-    public ResponseEntity<List<ClientePedido.PedidoResponse>> obtenerHistorialEntregas(
-            @RequestParam UUID usuarioId, // ⭐ Cambio de PathVariable a RequestParam
+    public ResponseEntity<List<Map<String, Object>>> obtenerHistorialEntregas(
+            @RequestParam UUID usuarioId,
             @RequestParam(required = false) String estado,
             @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate fechaInicio,
             @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate fechaFin) {
 
         try {
-            // ⭐ 1. Buscar deliveryId a partir del usuarioId
+            System.out.println("📋 Obteniendo historial para repartidor usuarioId: " + usuarioId);
+
+            // 1. Buscar deliveryId a partir del usuarioId
             UUID deliveryId = service.findDeliveryIdByUsuarioId(usuarioId)
                     .orElseThrow(() -> new RuntimeException("Repartidor no encontrado para el usuario"));
 
-            // 2. Obtener todos los pedidos del repartidor desde el pedido-service
-            List<ClientePedido.PedidoResponse> pedidos = clientePedido.obtenerPedidosPorRepartidor(deliveryId);
+            System.out.println("✅ Delivery ID encontrado: " + deliveryId);
 
-            // 3. Filtro por estado (si se envía)
+            // 2. Obtener ENTREGAS (no pedidos) desde la tabla entregas
+            List<Entrega> entregas = entregaRepository.findByRepartidorId(deliveryId);
+            
+            System.out.println("✅ Entregas encontradas: " + entregas.size());
+
+            // 3. Para cada entrega, obtener información del pedido
+            List<Map<String, Object>> historial = entregas.stream()
+                    .map(entrega -> {
+                        Map<String, Object> info = new HashMap<>();
+                        
+                        System.out.println("  📦 Procesando entrega ID: " + entrega.getId() + 
+                                         " - Estado: " + entrega.getEstado() + 
+                                         " - Pedido: " + entrega.getPedidoId());
+
+                        try {
+                            // Obtener datos del pedido desde el microservicio
+                            ClientePedido.PedidoResponse pedido = clientePedido.obtenerPedidoPorId(entrega.getPedidoId());
+
+                            // ✅ Construir la respuesta con el estado REAL de la tabla entregas
+                            info.put("id", entrega.getId());
+                            info.put("pedidoId", entrega.getPedidoId());
+                            info.put("estado", entrega.getEstado()); // ✅ Estado de la tabla entregas
+                            info.put("codigoEntrega", entrega.getCodigoConfirmacion());
+                            info.put("comentario", entrega.getComentariosEntrega());
+                            info.put("fechaCreacion", entrega.getHoraInicio());
+                            info.put("fechaActualizacion", entrega.getHoraFin());
+                            info.put("duracionMinutos", entrega.getDuracionMinutos());
+                            
+                            // Agregar datos del pedido
+                            if (pedido != null) {
+                                info.put("clienteId", pedido.getCliente().getId());
+                                info.put("restauranteId", pedido.getRestauranteId());
+                                info.put("total", pedido.getTotal());
+                                info.put("metodoPago", pedido.getMetodoPago());
+                                info.put("preferencias", pedido.getPreferencias());
+                                info.put("direccionEntregaId", pedido.getDireccionEntregaId());
+                            }
+
+                        } catch (Exception e) {
+                            System.out.println("⚠️ Error al obtener datos del pedido: " + e.getMessage());
+                            // Si falla obtener el pedido, al menos devolver datos básicos de la entrega
+                            info.put("id", entrega.getId());
+                            info.put("pedidoId", entrega.getPedidoId());
+                            info.put("estado", entrega.getEstado());
+                            info.put("codigoEntrega", entrega.getCodigoConfirmacion());
+                            info.put("fechaCreacion", entrega.getHoraInicio());
+                            info.put("fechaActualizacion", entrega.getHoraFin());
+                        }
+
+                        return info;
+                    })
+                    .collect(Collectors.toList());
+
+            // 4. Aplicar filtros
             if (estado != null && !estado.isEmpty()) {
-                pedidos = pedidos.stream()
-                        .filter(p -> p.getEstado().equalsIgnoreCase(estado))
-                        .toList();
+                historial = historial.stream()
+                        .filter(h -> estado.equalsIgnoreCase((String) h.get("estado")))
+                        .collect(Collectors.toList());
             }
 
-            // 4. Filtro por fechaInicio
             if (fechaInicio != null) {
-                pedidos = pedidos.stream()
-                        .filter(p -> p.getFechaCreacion().toLocalDate().isEqual(fechaInicio)
-                                || p.getFechaCreacion().toLocalDate().isAfter(fechaInicio))
-                        .toList();
+                historial = historial.stream()
+                        .filter(h -> {
+                            Object fecha = h.get("fechaCreacion");
+                            if (fecha instanceof java.time.LocalDateTime) {
+                                LocalDate fechaEntrega = ((java.time.LocalDateTime) fecha).toLocalDate();
+                                return fechaEntrega.isEqual(fechaInicio) || fechaEntrega.isAfter(fechaInicio);
+                            }
+                            return true;
+                        })
+                        .collect(Collectors.toList());
             }
 
-            // 5. Filtro por fechaFin
             if (fechaFin != null) {
-                pedidos = pedidos.stream()
-                        .filter(p -> p.getFechaCreacion().toLocalDate().isEqual(fechaFin)
-                                || p.getFechaCreacion().toLocalDate().isBefore(fechaFin))
-                        .toList();
+                historial = historial.stream()
+                        .filter(h -> {
+                            Object fecha = h.get("fechaCreacion");
+                            if (fecha instanceof java.time.LocalDateTime) {
+                                LocalDate fechaEntrega = ((java.time.LocalDateTime) fecha).toLocalDate();
+                                return fechaEntrega.isEqual(fechaFin) || fechaEntrega.isBefore(fechaFin);
+                            }
+                            return true;
+                        })
+                        .collect(Collectors.toList());
             }
 
-            return ResponseEntity.ok(pedidos);
+            System.out.println("✅ Devolviendo " + historial.size() + " entregas después de filtros");
+
+            return ResponseEntity.ok(historial);
 
         } catch (RuntimeException e) {
+            System.out.println("❌ Error: " + e.getMessage());
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
         } catch (Exception e) {
+            System.out.println("❌ Error inesperado: " + e.getMessage());
             e.printStackTrace();
             return ResponseEntity.status(502).build();
         }
     }
-
 }
